# JNIDemo

./: .gitignore
app/: build.gradle
app/src/androidTest/java/cn/zsw/jnitest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNILogUtils.cpp  native-lib.cpp
app/src/main/java/cn/zsw/jnitest/: JNI.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/cn/zsw/jnitest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
